# scout-extension

./: README.md
extension/: manifest.json  plugin.html  plugin.js
extension/js/: background.js
extension/js/wasm/: wasm_mod.js  wasm_mod_bg.wasm
wasm-lib/: Cargo.toml
wasm-lib/src/: lib.rs
